compiler/testData/diagnostics/tests/incompleteCode/senselessComparisonWithNull.jet
package d

fun foo(<!UNUSED_PARAMETER!>a<!> : IntArray) {
    if (null == <!UNRESOLVED_REFERENCE!>a<!>()<!SYNTAX!><!>
<!SYNTAX!><!>}